# inkINI

./: .gitignore  CMakeLists.txt  README.md  todo.txt
include/inkINI/: inkINI.h  inkINI.hpp
src/: ini_file.cpp  inkINI.c
test/: test.c  test.cpp
test/ini-files/: a.ini  b.ini
